# cpp-course-project-path-tracer

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  Meeting-notes.md  README.md  example_scene.json  project_document_image.json
cmake/: FindEigen3.cmake
doc/: CMakeLists.txt
doc/doxygen-custom/: header.html
examples/: CMakeLists.txt  box.cpp  cli.cpp  from_json.cpp  json_play_file.cpp  readme.md
include/geometry/: Sphere.cpp  Sphere.hpp
include/ray/: Ray.cpp  Ray.hpp  color.hpp  light_source.hpp  ray.hpp
include/tracey/: camera.hpp  cli.hpp  constants.hpp  file_writer.hpp  path_tracer.hpp  path_tracer_mt.hpp  ray.hpp  reader.hpp  result.hpp  scene.hpp  tracey.hpp
include/tracey/geometry/: Geometry.hpp  GeometryList.cpp  Sphere.hpp  box.hpp  geometry.hpp  geometry_list.hpp  plane.hpp  sphere.hpp
include/tracey/material/: material.hpp  texture.hpp
include/tracey/ray/: Ray.cpp  color.hpp  hittable.hpp  hittable_list.hpp  light_source.hpp  ray.hpp  sphere.hpp
include/tracey/utils/: FileWriterTest.cpp  file_reader.hpp  file_writer.hpp
include/utils/: FileWriter.cpp  FileWriterTest.cpp
libs/: readme.md
output/: readme.md
src/: main.cpp  readme.md  tracey.cpp
src/geometry/: Geometry.hpp  GeometryList.hpp  Sphere.cpp  Sphere.hpp
src/utils/: FileWriter.hpp  FileWriterTest  FileWriterTest.cpp
tests/: CMakeLists.txt  test_cli.cpp
tests/test_camera/: CMakeLists.txt  test.glance  test_camera.cpp
tests/test_file_writer/: CMakeLists.txt  test_file_writer.cpp
tests/test_filewriter/: CMakeLists.txt  FileWriterTest.cpp
tests/test_from_json/: CMakeLists.txt  test_from_json.cpp
tests/test_material/: CMakeLists.txt  test_material  test_material.cpp
